تحسينات في الريسبونسف

--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -25,20 +25,21 @@
                 <div class="item-cyan">
                     <h6 class="title">Ultimate Digital Marketing Bootcamp</h6>
                     <div class="price-amount">
-                        <span class="price" data-price="10">10.00</span>$
+                        <span class="price" data-price="10">$10.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1">
+                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
                 </div>
-                <button class="item-remove-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path fill="currentColor"
-                            d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12z" />
-                    </svg>
-                </button>
+                    <button class="item-remove-btn">
+                        <span class="visually-hidden">Remove from cart</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12z" />
+                        </svg>
+                    </button>
             </div>
             <div class="cart-item">
                 <div class="item-image">
@@ -47,15 +48,16 @@
                 <div class="item-cyan">
                     <h6 class="title">AI & Machine Learning Fundamentals</h6>
                     <div class="price-amount">
-                        <span class="price" data-price="45">45.00</span>$
+                        <span class="price" data-price="45">$45.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1">
+                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
                 </div>
                 <button class="item-remove-btn">
+                    <span class="visually-hidden">Remove from cart</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path fill="currentColor"
                             d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12z" />
@@ -69,15 +71,16 @@
                 <div class="item-cyan">
                     <h6 class="title">Mastering Web Development</h6>
                     <div class="price-amount">
-                        <span class="price" data-price="75">75.00</span>$
+                        <span class="price" data-price="75">$75.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1">
+                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
                 </div>
                 <button class="item-remove-btn">
+                    <span class="visually-hidden">Remove from cart</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path fill="currentColor"
                             d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12z" />
