--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -6,17 +6,22 @@
                 <div class="col-lg-6 align-self-center">
                     <div class="hero-text">
                         <h2>Best <span>Online</span> Platform to Learn <span id="typed-text"></span></h2>
-                        <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your growth. Join thousands of learners worldwide!</p>
-                        <div class="d-lg-flex align-items-center justify-content-center justify-content-lg-start mt-3 mb-3">
+                        <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your
+                            growth. Join thousands of learners worldwide!</p>
+                        <div
+                            class="d-lg-flex align-items-center justify-content-center justify-content-lg-start mt-3 mb-3">
                             <a href="html/course-1.html" class="button button-lg button-dark mb-1 mb-lg-0">
                                 Find Courses
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
+                                <span><i class='bx bx-right-arrow-alt ms-1'></i></span>
                             </a>
-                            <button type="button" class="button button-lg button-outline-dark ms-lg-2" data-bs-toggle="modal" data-bs-target="#videoModal">
+                            <button type="button" class="button button-lg button-outline-dark ms-lg-2"
+                                data-bs-toggle="modal" data-bs-target="#videoModal">
                                 Watch Demo
                                 <span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24">
-                                        <path fill="currentColor" d="M6 5.912c0-.155.037-.307.107-.443c.23-.44.75-.599 1.163-.354l10.29 6.088c.14.083.255.206.332.355c.23.44.08.995-.332 1.239L7.27 18.885a.8.8 0 0 1-.415.115C6.383 19 6 18.592 6 18.089z" />
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24"
+                                        viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M6 5.912c0-.155.037-.307.107-.443c.23-.44.75-.599 1.163-.354l10.29 6.088c.14.083.255.206.332.355c.23.44.08.995-.332 1.239L7.27 18.885a.8.8 0 0 1-.415.115C6.383 19 6 18.592 6 18.089z" />
                                     </svg>
                                 </span>
                             </button>
@@ -25,10 +30,21 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-image">
-                        <img src="assets/images/hero-img.png" data-speed="8" class="abs parallax-effect" alt="Hero image preview">
+                        <img src="assets/images/hero-img.png" data-speed="8" class="abs parallax-effect"
+                            alt="Hero image preview">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Floating header spahes -->
+<img src="assets/images/abstracts/abstract-dots-1.svg" data-speed="5"
+    class="abs parallax-effect v-animate move-up-down dots" alt="Hero image preview">
+<img src="assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8"
+    class="abs parallax-effect v-animate move-left-right red-plus" alt="Hero image preview">
+<img src="assets/images/abstracts/element-book-2.svg" data-speed="6" class="abs parallax-effect v-animate  book"
+    alt="Hero image preview">
+<img src="assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4"
+    class="abs parallax-effect v-animate diagonalMove crown" alt="Hero image preview">
