--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -12,11 +12,8 @@
                             aria-expanded="false">Home</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <button type="button" class="btn-back">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                            d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                    </svg>
+                                <button type="button" class="btn-back" aria-label="Back">
+                                    <i class='bx bx-arrow-back'></i>
                                 </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
@@ -38,11 +35,8 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Courses</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <button type="button" class="btn-back">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                            d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                    </svg>
+                                <button type="button" class="btn-back" aria-label="Back">
+                                    <i class='bx bx-arrow-back'></i>
                                 </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
@@ -64,11 +58,8 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <button type="button" class="btn-back">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                            d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                    </svg>
+                                <button type="button" class="btn-back" aria-label="Back">
+                                    <i class='bx bx-arrow-back'></i>
                                 </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
@@ -80,15 +71,12 @@
                                 </button>
                             </li>
                             <li class="dropdown">
-                                <a class="dropdown-item dropdown-toggle sub-dropdown-toggle" href="javascript:void(0)" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">Products</a>
+                                <a class="dropdown-item dropdown-toggle sub-dropdown-toggle" href="javascript:void(0)"
+                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown-menu-heading">
-                                        <button type="button" class="btn-back">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                                <path fill="currentColor"
-                                                    d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                            </svg>
+                                        <button type="button" class="btn-back" aria-label="Back">
+                                            <i class='bx bx-arrow-back'></i>
                                         </button>
                                         <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                             aria-label="Close">
@@ -111,11 +99,8 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">Teacher</a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown-menu-heading">
-                                        <button type="button" class="btn-back">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                                <path fill="currentColor"
-                                                    d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                            </svg>
+                                        <button type="button" class="btn-back" aria-label="Back">
+                                            <i class='bx bx-arrow-back'></i>
                                         </button>
                                         <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                             aria-label="Close">
@@ -142,11 +127,8 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <button type="button" class="btn-back">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                            d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
-                                    </svg>
+                                <button type="button" class="btn-back" aria-label="Back">
+                                    <i class='bx bx-arrow-back'></i>
                                 </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
@@ -213,6 +195,7 @@
                     <li class="nav-item d-none d-lg-block">
                         <button type="button" class="button sidebar-cyan-button" data-bs-toggle="offcanvas"
                             data-bs-target="#contactInfoCanvas">
+                            <span class="visually-hidden">Contact info canvas toggler</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path fill="currentColor"
                                     d="M22 18.005c0 .55-.446.995-.995.995h-8.01a.995.995 0 0 1 0-1.99h8.01c.55 0 .995.445.995.995M22 12c0 .55-.446.995-.995.995H2.995a.995.995 0 1 1 0-1.99h18.01c.55 0 .995.446.995.995m-.995-5.01a.995.995 0 0 0 0-1.99H8.995a.995.995 0 1 0 0 1.99z" />
