--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -137,6 +137,7 @@
 
                     <button type="button" class="button sidebar-cyan-button d-lg-none" data-bs-toggle="offcanvas"
                         data-bs-target="#contactInfoCanvas">
+                        <span class="visually-hidden">Contact Info Canvas Toggler</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
                                 d="M12.002 1.999c5.523 0 10.001 4.478 10.001 10.002c0 5.523-4.478 10.001-10.001 10.001C6.478 22.002 2 17.524 2 12.001C2 6.477 6.478 1.999 12.002 1.999m0 1.5a8.502 8.502 0 1 0 0 17.003a8.502 8.502 0 0 0 0-17.003M12 10.5a.75.75 0 0 1 .75.75v5a.75.75 0 0 1-1.5 0v-5a.75.75 0 0 1 .75-.75M12 9a1 1 0 1 0 0-2a1 1 0 0 0 0 2" />
@@ -145,6 +146,7 @@
 
                     <button type="button" class="navbar-toggler d-lg-none" data-bs-toggle="offcanvas"
                         data-bs-target="#navbarMainMenu">
+                        <span class="visually-hidden">Navbar Toggler</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
                                 d="M22 18.005c0 .55-.446.995-.995.995h-8.01a.995.995 0 0 1 0-1.99h8.01c.55 0 .995.445.995.995M22 12c0 .55-.446.995-.995.995H2.995a.995.995 0 1 1 0-1.99h18.01c.55 0 .995.446.995.995m-.995-5.01a.995.995 0 0 0 0-1.99H8.995a.995.995 0 1 0 0 1.99z" />
