--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,4 +1,7 @@
 .footer {
+    background: linear-gradient(to top, #e7ede8, transparent);
+    padding: 64px;
+
     .logo svg {
         color: var(--main-color)
     }
