editing in style

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    background: linear-gradient(to top, #e7ede8, transparent);
+    // background: linear-gradient(to top, #e7ede8, transparent);
+    background: gray;
     padding: 64px;
 
     .logo svg {
