--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,4 +33,5 @@
 @use './sections/brands';
 @use './sections/statistics';
 @use './sections/testimonials';
+@use './sections/get-started';
 @use './sections/blog';
