--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -2,19 +2,19 @@
     <div class="footer-top">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="info">
-                        @@include('html/components/logo.html')
+                <div class="col-lg-3 footer-block">
+                    @@include('html/components/logo.html')
 
-                        <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
+                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
 
+                    <div class="socials">
                         @@include('html/components/socials.html')
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 footer-block">
                     <div class="links">
-                        <h6>Links</h6>
+                        <h6 class="footer-title">Links</h6>
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a href="#" class="nav-link">About Us</a>
@@ -38,10 +38,10 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 footer-block">
                     <div class="contact-info">
-                        <h6>Contact Us</h6>
-                        <div class="contact-item d-flex mb-4">
+                        <h6 class="footer-title">Contact Us</h6>
+                        <div class="contact-item">
                             <div class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
                                     <path fill="none" stroke="currentColor" stroke-linecap="round"
@@ -55,7 +55,7 @@
                             </div>
                         </div>
 
-                        <div class="contact-item d-flex mb-4">
+                        <div class="contact-item">
                             <div class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
                                     <g fill="none" stroke="currentColor" stroke-width="1">
@@ -72,7 +72,7 @@
                             </div>
                         </div>
 
-                        <div class="contact-item d-flex mb-4">
+                        <div class="contact-item">
                             <div class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
                                     <path fill="none" stroke="currentColor" stroke-width="1"
@@ -87,15 +87,15 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 footer-block">
                     <div class="news-letter">
-                        <h6>Subscribe</h6>
+                        <h6 class="footer-title">Subscribe</h6>
                         <p>Enter your email address to register to our newsletter subscription</p>
                         <form action="/" method="get">
                             <input type="email" name="email" class="form-control" placeholder="Enter email">
-                            <button type="button" class="button button-lg button-main mb-1 mb-lg-0">
-                                Subscribe Now
-                                <span><i class='bx bx-right-arrow-alt ms-1'></i></span>
+                            <button type="button" class="button button-lg button-main">
+                                <span>Subscribe Now</span>
+                                <i class='bx bx-right-arrow-alt ms-1'></i>
                             </button>
                         </form>
                     </div>
@@ -105,12 +105,10 @@
     </div>
 
     <div class="copyright">
-        <div class="container">
-            <div class="text-center">
-                <p>&copy; Copyright <span id="footer-year"></span> Velora | Developed By <a
-                        href="https://github.com/ahmedelsewailky" target="_blank" rel="noopener">A.Elsewelky</a>. All
-                    Rights Reserved</p>
-            </div>
+        <div class="section-inner">
+            <p>&copy; Copyright <span id="footer-year"></span> Velora | Developed By <a
+                    href="https://github.com/ahmedelsewailky" target="_blank" rel="noopener">A.Elsewelky</a>. All
+                Rights Reserved</p>
         </div>
     </div>
 </footer>
