--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -12,7 +12,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 footer-block">
+                <div class="col-lg-2 offset-lg-1 footer-block">
                     <div class="links">
                         <h6 class="footer-title">Links</h6>
                         <ul class="nav flex-column">
