--- a/src/scss/sections/_get-started.scss
+++ b/src/scss/sections/_get-started.scss
@@ -1,8 +1,18 @@
 .section.get-started {
     .section-inner {
-        background: linear-gradient(20deg,#22c55e 50%,#1eab52 0%);
+        background: linear-gradient(20deg, #22c55e 50%, #1eab52 0%);
         border-radius: 24px;
         padding-top: 32px;
+
+        @media (max-width: 992px) {
+            padding: 32px;
+            text-align: center;
+
+            img {
+                display: none;
+            }
+        }
+
         color: white;
     }
 }
