--- a/src/scss/sections/_blog.scss
+++ b/src/scss/sections/_blog.scss
@@ -3,6 +3,7 @@
         position: relative;
         overflow: hidden;
         border-radius: 16px;
+        height: 220px;
 
         img {
             width: 100%;
