--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-top">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 footer-block">
+                <div class="col-md-6 col-lg-3 footer-block">
                     @@include('html/components/logo.html')
 
                     <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
@@ -12,7 +12,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-2 offset-lg-1 footer-block">
+                <div class="col-md-5 offset-md-1 col-lg-2 footer-block">
                     <div class="links">
                         <h6 class="footer-title">Links</h6>
                         <ul class="nav flex-column">
@@ -38,7 +38,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 footer-block">
+                <div class="col-md-6 col-lg-3 footer-block">
                     <div class="contact-info">
                         <h6 class="footer-title">Contact Us</h6>
                         <div class="contact-item">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 footer-block">
+                <div class="col-md-6 col-lg-3 footer-block">
                     <div class="news-letter">
                         <h6 class="footer-title">Subscribe</h6>
                         <p>Enter your email address to register to our newsletter subscription</p>
