--- a/src/scss/components/_totop.scss
+++ b/src/scss/components/_totop.scss
@@ -3,16 +3,47 @@
     bottom: 30px;
     right: 30px;
     z-index: 999;
-    background-color: #ff6600;
+    background-color: var(--dark-color);
     color: white;
-    padding: 10px 15px;
-    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
+    border-radius: 12px;
+    text-align: center;
     font-size: 20px;
     display: none;
     cursor: pointer;
     transition: all 0.3s ease;
+}
 
-    :hover {
-        background-color: var(--main-color);
+.back-to-top:hover {
+    background-color: var(--main-color);
+    animation: bounce 0.5s ease;
+    box-shadow: 0 0 24px rgba(var(--main-rgb-color), 50%);
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+
+    20% {
+        transform: translateY(-5px);
+    }
+
+    40% {
+        transform: translateY(0);
+    }
+
+    60% {
+        transform: translateY(-3px);
+    }
+
+    80% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(0);
     }
 }
