--- a/src/scss/sections/_courses-category.scss
+++ b/src/scss/sections/_courses-category.scss
@@ -24,5 +24,44 @@
         }
     }
 
+    // Large screens (>= 992px)
+    @media (min-width: 992px) {
+
+        // Highlight items: 1, 3, 6, 8
+        .section-content .row>div:nth-child(1),
+        .section-content .row>div:nth-child(3),
+        .section-content .row>div:nth-child(6),
+        .section-content .row>div:nth-child(8) {
+            .category-item {
+                background-color: var(--bg-ice-gray);
+            }
+        }
+    }
+
+    // Medium screens (768px - 991px)
+    @media (min-width: 768px) and (max-width: 991px) {
+
+        // Highlight items: 1, 4, 5, 8
+        .section-content .row>div:nth-child(1),
+        .section-content .row>div:nth-child(4),
+        .section-content .row>div:nth-child(5),
+        .section-content .row>div:nth-child(8) {
+            .category-item {
+                background-color: var(--bg-ice-gray);
+            }
+        }
+    }
+
+    // Small screens (<= 576px)
+    @media (max-width: 576px) {
+
+        // Highlight even items
+        .section-content .row>div:nth-child(even) {
+            .category-item {
+                background-color: var(--bg-ice-gray);
+            }
+        }
+    }
+
 
 }
