--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @use './components/buttons';
 @use './components/tooltips';
 @use './components/offcanvas';
+@use './components/logo';
 @use './components/totop';
 
 // Utilities
