--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-md-6 col-lg-3 footer-block">
                     @@include('html/components/logo.html')
 
-                    <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
+                    <p class="lh-lg">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
 
                     <div class="socials">
                         @@include('html/components/socials.html')
