--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -3,14 +3,14 @@
         <div class="inner-wrap">
             <div class="row">
                 <!-- Left -->
-                <div class="col col-lg-2 d-flex align-self-center">
+                <div class="col col-md-2 d-flex align-self-center">
                     @@include('html/components/logo.html')
                 </div>
 
                 <!-- Middle -->
-                <div class="d-none d-lg-block col-lg-6 align-self-center">
+                <div class="d-none d-md-block col-md-7 col-lg-6 align-self-center">
                     <div class="search">
-                        <div class="search-category dropdown">
+                        <div class="search-category dropdown d-none d-lg-block">
                             <button type="button" class="button" data-bs-toggle="dropdown">
                                 <i class="bx bx-category"></i>
                                 <span class="mx-2">Categories</span>
@@ -117,7 +117,7 @@
                 </div>
 
                 <!-- Right -->
-                <div class="col col-lg-4 align-self-center justify-content-end justify-content-lg-start d-flex">
+                <div class="col col-md-3 col-lg-4 align-self-center justify-content-end justify-content-lg-start d-flex">
                     <div class="social-links">
                         @@include('html/components/socials.html')
                     </div>
