--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -3,14 +3,13 @@
     <div class="container">
         <div class="hero-section-inner">
             <div class="row">
-                <div class="col-lg-6 align-self-center">
-                    <div class="hero-text">
+                <div class="col-md-6 col-lg-6 align-self-center">
+                    <div class="hero-text text-center text-md-start">
                         <h2>Best <span>Online</span> Platform to Learn <span id="typed-text"></span></h2>
                         <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your
                             growth. Join thousands of learners worldwide!</p>
-                        <div
-                            class="d-lg-flex align-items-center justify-content-center justify-content-lg-start mt-3 mb-3">
-                            <a href="html/course-1.html" class="button button-lg button-dark mb-1 mb-lg-0">
+                        <div class="mt-3">
+                            <a href="html/course-1.html" class="button button-lg button-dark mb-1 mb-md-0">
                                 Find Courses
                                 <span><i class='bx bx-right-arrow-alt ms-1'></i></span>
                             </a>
@@ -18,17 +17,13 @@
                                 data-bs-toggle="modal" data-bs-target="#videoModal">
                                 Watch Demo
                                 <span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24"
-                                        viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                            d="M6 5.912c0-.155.037-.307.107-.443c.23-.44.75-.599 1.163-.354l10.29 6.088c.14.083.255.206.332.355c.23.44.08.995-.332 1.239L7.27 18.885a.8.8 0 0 1-.415.115C6.383 19 6 18.592 6 18.089z" />
-                                    </svg>
+                                    <i class="bx bx-play ms-1"></i>
                                 </span>
                             </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6 col-lg-6">
                     <div class="hero-image">
                         <img src="assets/images/hero-img.png" data-speed="8" class="abs parallax-effect"
                             alt="Hero image preview">
