--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -44,31 +44,19 @@
 .header {
     padding: 18px 0;
 
-    .logo {
-        a {
-            font-weight: 700;
-            font-size: 24px;
-            letter-spacing: 0.5px;
-        }
-
-        @media (max-width: 992px) {
-
-            a {
-                font-size: 19px;
-                letter-spacing: 0.5px;
-                font-weight: 600;
-                text-transform: uppercase;
-                display: inline-flex;
-                align-items: center;
-            }
-        }
-    }
-
     .search {
         @extend %flex-center;
         padding: 10px 16px;
         background-color: #fff;
         border-radius: var(--border-radius-size);
+
+        @media (min-width: 577px) and (max-width: 991px) {
+            form {
+                border: 1px solid var(--border-color);
+                padding: 2px;
+                border-radius: var(--border-radius-size);
+            }
+        }
 
         .search-category {
             width: 180px;
